--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,7 +9,7 @@
     max-width: 800px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(4, auto);
     align-items: center;
     justify-items: center;
 }
@@ -20,7 +20,28 @@
     text-decoration: none;
 }
 
+.Header button{
+    outline : none;
+    border: none;
+    background-color: #ff3836;
+    padding: 8px 15px;
+    font-size: 20px;
+    margin: 8px 5px;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.45s;
+}
 
+.Header button:hover {
+    color:  #ff3836;
+    background-color: white;
+    outline:  #ff3836 solid 1px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.25);
+    transform: translateY(-3px);
+
+
+}
 @media (max-width: 640px) {
    .Header {
        padding: 15px 0;
